<resources>
    <string name="app_name">Math Game</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="scoreLbl">Score:</string>
    <string name="initScore">0</string>
    <string name="lifeLbl">Life:</string>
    <string name="maxLifeCount">3</string>
    <string name="timeLbl">Time:</string>
    <string name="maxTime">30</string>
    <string name="answerHintTxt">Write your answer here</string>
    <string name="ok">OK</string>
    <string name="next">Next</string>
</resources>