<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/scoreLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/scoreLbl"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/initScore"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lifeLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lifeLbl"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewLife"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/maxLifeCount"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/timeLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timeLbl"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/maxTime"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/blue"
        android:gravity="center"
        android:text=""
        android:textColor="@color/white"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/editTextAnswer"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:background="@color/blue"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/answerHintTxt"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="26sp"
        android:digits="0,1,2,3,4,5,6,7,8,9,-"
        android:autofillHints=""/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:text="@string/ok"
            android:textColor="@color/blue"
            android:textSize="20sp"
            app:backgroundTint="@null"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:text="@string/next"
            android:textColor="@color/blue"
            android:textSize="20sp"
            app:backgroundTint="@null"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>